correção da caminho da imagem

--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
           </div>
           <div>
             <img
-              src="img/frutas-verduras/couve.jpg"
+              src="img/frutas-verduras/couve.png"
               alt="couve"
               width="80"
               height="80"
